<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
    <!-- Application identifiers -->
    <string name="app_name">Pivotal</string>
    <string name="app_tag">Pivotal</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_label">Trackr</string>
    <string name="app_description">
        Displays current address and current or updated location using Location Services
    </string>

    <!-- User interface labels and strings -->

    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <!-- Menu title -->

    <!-- Labels -->
    <string name="latlng">Lat/Long:</string>
    <string name="address">Address:</string>

    <!-- Messages -->
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="connection_suspended">Connection suspended</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">
        Illegal arguments: Latitude %1$.8f Longitude %2$.8f
    </string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">
        Location update error. code %1$d message %2$s
    </string>
    <string name="location_update_missing_update">
        Location update error. No incoming location.
    </string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">
        Can\'t request location updates, previous request hasn\'t finished
    </string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    <string name="notification_title">Tracking location</string>
    <string name="notification_text">Tap to change state</string>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="login">Login to Pivotal Tracker</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="login_failure">Login to Pivotal Tracker failed. Check your credentials and your network settings.</string>
    <string name="projects_failure">Failed to load projects.</string>
    <string name="my_projects">My Projects</string>
    <string name="stories_failure">Failed to load stories.</string>
    <string name="iterations_failure">Failed to load iterations.</string>
    <string name="story_failure">Failed to load story.</string>
    <string name="story">Story {story_id}</string>
    <string name="labels_failure">Failed to load labels.</string>
    <string name="activities_failure">Failed to load activities.</string>
    
    <string name="ui_toggle_for_menu">Menu</string>
    <string name="ui_go_back">Go back</string>
    <string name="velocity">Velocity</string>
    <string name="volatility">Volatility</string>
    <string name="comments">Comments</string>
    <string name="tasks">Tasks</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="deliver">Deliver</string>
    <string name="finish">Finish</string>
    <string name="estimate">{estimate} points</string>
    <string name="unestimated">Unestimated</string>
    <string name="unestimated_prefix">U</string>
    
    <string name="current_stories">Current</string>
    <string name="backlog">Backlog</string>
    <string name="icebox">Icebox</string>
    <string name="my_work">My Work</string>
    <string name="done">Done</string>
    <string name="epics">Epics</string>
    <string name="labels">Labels</string>
    <string name="charts">Charts</string>
    <string name="project_history">Project History</string>
    <string name="zero">0</string>
    <string name="iteration">Iteration</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="team_strength">Team strength</string>
    <string name="iteration_i_done">Iteration {number} - Done stories</string>
    <string name="search">Search</string>
    <string name="empty_search">Enter a search term.</string>
    <string name="accepted">Accepted</string>
    <string name="created_on">Created {date}</string>
    <string name="updated_on">Last updated {date}</string>
    <string name="followers">Followers</string>
    <string name="restart">Restart</string>
    <string name="start">Start</string>
</resources>
