<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
	android:paddingTop="0dp"
    android:paddingBottom="5dp"
    android:clickable="true"
    android:background="#fff">
    <TextView          
        android:id="@+id/divider_start"
        android:layout_width="fill_parent" 
        android:layout_height="1.5sp" 
        android:background="#ececec" 
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_centerVertical="true"
        android:paddingRight="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:id="@+id/c">
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#444"
            android:textSize="15sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            >
            <TextView
            	android:id="@+id/created_by"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text=""
            	android:textColor="#444"
            	android:textSize="11sp"
            	/>
            <TextView
            	android:id="@+id/create_date"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text=""
            	android:textColor="#444"
            	android:textSize="11sp"
            	android:layout_marginLeft="5dp"
            	/>
            <TextView
            	android:id="@+id/update_date"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text=""
            	android:textColor="#444"
            	android:textSize="11sp"
            	android:layout_marginLeft="5dp"
            	/>	
        </LinearLayout>        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            >
        	<TextView
            	android:id="@+id/owners"
            	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:text=""
            	android:textColor="#444"
            	android:textSize="13sp"
            	android:layout_weight="0.9"
            	/>
        </LinearLayout>     
        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#555"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            android:lineSpacingExtra="1dp"
            />
        <com.qurater.pivotal.ui.TwoWayView 
        	android:orientation="horizontal"
        	android:id="@+id/labels"
        	android:layout_width="match_parent"
        	android:layout_height="25dp"
        	android:drawSelectorOnTop="false"
        	android:layout_marginTop="12dp"
        	android:layout_marginBottom="7dp"
        />          
         <LinearLayout
         	android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/v_answer_container"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            >
            <ImageView
            	android:id="@+id/iv_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/commentbtn_xhdpi"
                />    
            <TextView
            	android:id="@+id/tv_answer_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/zero"
                android:textColor="#444"
                android:textSize="12sp" 
                />
            <ImageView
            	android:id="@+id/ico_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/usericon_xhdpi"
                android:background="#888"
                android:layout_marginLeft="5dp"
                android:padding="2dp"
                />    
            <TextView
            	android:id="@+id/tv_follower_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/zero"
                android:textColor="#444"
                android:textSize="12sp" 
                />    
            <RelativeLayout 
                android:id="@+id/story_type_container"
                android:layout_width="26dp"
                android:layout_height="28dp"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:layout_gravity="center"
                >
                <RelativeLayout 
                	android:id="@+id/story_type_circle"
                	android:layout_width="match_parent"
                	android:layout_height="match_parent"
                />
                <TextView
            		android:id="@+id/story_type"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:layout_marginLeft="5dp"
                	android:layout_centerVertical="true"
                	android:layout_centerHorizontal="true"
                	android:text=""
                	android:textColor="#fff"
                	android:textSize="10sp" 
                />  
            </RelativeLayout>    
            <RelativeLayout 
                android:id="@+id/points_container"
                android:layout_width="26dp"
                android:layout_height="28dp"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:layout_gravity="center"
                >
                <RelativeLayout 
                	android:id="@+id/points_circle"
                	android:layout_width="match_parent"
                	android:layout_height="match_parent"
                />
                <TextView
            		android:id="@+id/tv_estimate"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:layout_marginLeft="5dp"
                	android:layout_centerVertical="true"
                	android:layout_centerHorizontal="true"
                	android:text=""
                	android:textColor="#000"
                	android:textSize="10sp" 
                />  
            </RelativeLayout>
            <TextView
            	android:id="@+id/btn_accept"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/accept"
                android:textColor="#fff"
                android:textSize="12sp" 
                android:background="#629200"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                />		
            <TextView
            	android:id="@+id/btn_reject"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/reject"
                android:textColor="#fff"
                android:textSize="12sp" 
                android:background="#A71F38"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                />      
            <TextView
            	android:id="@+id/btn_deliver"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/deliver"
                android:textColor="#fff"
                android:textSize="12sp" 
                android:background="#F39300"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                /> 
            <TextView
            	android:id="@+id/btn_finish"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/finish"
                android:textColor="#fff"
                android:textSize="12sp" 
                android:background="#203E64"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                /> 
            <TextView
            	android:id="@+id/btn_restart"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/restart"
                android:textColor="#444"
                android:textSize="12sp" 
                android:background="#E0E2E5"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                />  
            <TextView
            	android:id="@+id/btn_start"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/start"
                android:textColor="#fff"
                android:textSize="12sp" 
                android:background="#73B1BC"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                />         
            <TextView
            	android:id="@+id/accepted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/accepted"
                android:textColor="#629200"
                android:textSize="12sp" 
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:visibility="gone"
                />                  
         </LinearLayout>    
    </LinearLayout>
</RelativeLayout>    