<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#5282b0"
    android:id="@+id/my_groups_action_bar"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/my_groups_header"
        >
		<ImageView
            android:id="@+id/menu_go_back"
            android:contentDescription="@string/ui_go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/backbtnwhite_xhdpi"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:clickable="true" 
        />   
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text=""
            android:textColor="#fff"
            android:textSize="22sp" />
        <LinearLayout 
            android:id="@+id/search_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"	
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:background="#fff"
            android:visibility="gone"
            >    
        	<!-- Editext for Search -->
    		<EditText android:id="@+id/input_search"
    		    android:layout_weight="0.9"
        		android:layout_width="0dp"
        		android:layout_height="match_parent"
        		android:textSize="25dp"
        		android:hint="@string/search"
        		android:inputType="text"
        		android:singleLine="true"
        		android:lines="1"
        		android:textColor="#444"
        		android:gravity="center"
        	/>
        	<ImageView
            	android:id="@+id/btn_search"
            	android:contentDescription="@string/search"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:src="@drawable/searchgray_xhdpi"
            	android:layout_marginLeft="5dp"
        	/>
        	<ImageView
            	android:id="@+id/btn_close_search"
            	android:contentDescription="@string/search"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:src="@drawable/ico_close_gray"
            	android:layout_marginLeft="5dp"
            	android:layout_marginRight="5dp"
        	/>
        </LinearLayout>    
        <LinearLayout 
            android:id="@+id/drawer_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"	
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:gravity="center"
            >
        	<ImageView
            	android:id="@+id/btn_search_trigger"
            	android:contentDescription="@string/search"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:src="@drawable/searchwhite_xhdpi"
        	/>  	
        	<ImageView
            	android:id="@+id/drawer"
            	android:contentDescription="@string/ui_toggle_for_menu"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:src="@drawable/menu_xhdpi"
            	android:layout_marginLeft="5dp"
        	/>
        </LinearLayout>                 
    </RelativeLayout>
    <TextView          
       android:id="@+id/divider"
        android:layout_width="fill_parent" 
        android:layout_height="1dp"
        android:background="#ececec" 
        android:layout_below="@+id/my_groups_header"
    />
 
</RelativeLayout>